# zone-service/api/domain/member.js
@@ -38,19 +38,17 @@ replied.prototype.getData = function () {
 
 
 // create new member for zone
-member.prototype.postmember = ( photo,traceId,cb) => {
+member.prototype.postmember = ( zoneId,photo,ownerId,signupBy,traceId,cb) => {
 
     member.prototype.data['createdDTS'] = moment.utc().format();
     member.prototype.data['updatedDTS'] = moment.utc().format();
     var memberMetadata = new LabMetadata(member.prototype.data).getData();
-     
-    var request = require('request').defaults({ encoding: 'binary' });
-request.get(photo, function (err, res, body) {
-      console.log("photourl"+body)
-      var base64      = new Buffer(body, 'binary').toString('base64');
-      memberMetadata.memberPhoto=base64
+      memberMetadata.zoneId=zoneId;
+      memberMetadata.userId=zoneId+Math.floor((Math.random() * 10000) + 1);
+      memberMetadata.ownerId=ownerId;
+      memberMetadata.signupBy=signupBy;
       insertmember();
-});
+
     
 //local function to insert members
     function insertmember(){
@@ -73,25 +71,39 @@ request.get(photo, function (err, res, body) {
         }
 
 // update the member
-member.prototype.replaymember = (tbodyData,componentId, userId, traceId, memberId, userType, orgId, cb) => {
+member.prototype.requestToJoin = (bodyData,picture,zoneId,cityId, userId, ownerId,signupBy,traceId, cb) => {
     console.log("update member api called")
-    tbodyData.updatedDTS = moment.utc().format();
-    tbodyData.publisherId=userId;
-    rdb.table("membersandratings").filter({ componentId: componentId, memberId: memberId,status:"publish" }).run().then(function (result) {
-       var publisherRepalies =result[0].publisherRepalies;
-        publisherRepalies.push(tbodyData);
-      rdb.table("membersandratings").filter({ componentId: componentId, memberId: memberId,status:"publish" }).update({publisherRepalies:publisherRepalies}).run().then(function (updatedResult) {
-                var resObj = { "status": "200", "data": { "message": "Publisher replayed updated successfully" } }
-                cb(null, resObj);
-            }).catch(function (err) {
-                log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
+    var memberMetadata = new LabMetadata(member.prototype.data).getData();
+    memberMetadata.updatedDTS = moment.utc().format();
+    memberMetadata.userId=userId;
+    memberMetadata.zoneId=zoneId;
+    memberMetadata.cityId=cityId;
+    memberMetadata.ownerId=ownerId;
+    memberMetadata.signupBy=signupBy;
+    memberMetadata.memberPhoto={
+        "url":picture
+    }
 
-                cb(err)
-            })
+    rdb.table("members").filter({'zoneId':zoneId,userId:userId}).run().then(function (count){
+if(!count.length>0){
+    rdb.table("members").insert(memberMetadata).run().then(function (result) {
+        var resObj = { "status": "200", "data": { "message": "your request is yet to approve"} }
+                    
+        cb(null,resObj);
 }).catch(function (err) {
     log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
     cb(err);
 })
+}else{
+    var resObj = { "status": "203", "data": { "message": "you arleady joined this studio"} }
+    cb(null,resObj);
+}
+    })
+
+    .catch(function (err) {
+        log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
+        cb(err);
+    })
 }
 
 // delete member
@@ -110,14 +122,14 @@ member.prototype.deletemember = (componentId, memberId,orgId,traceId, tenantId, 
     });
 }
 
-// list all member for admin level
-member.prototype.findAllmembersForAllcity = (traceId, startfrom,cb) => {
+// list all member for owner level active members
+member.prototype.findAllmembersForAllcity = (traceId, userId,status,cb) => {
     var response = {
         message: "Cannot Get all member.",
         statusCode: 404,
         errorCode: "code1"
     }
-    rdb.table("members").filter({"memberStatus":"inReview"}).skip(Number(startfrom)).limit(10).run().then(function (result) {
+    rdb.table("members").filter({"ownerId":userId,"memberStatus":status}).group("zoneName").run().then(function (result) {
         var resObj = { "status": "200", "data": result }
         cb(null, resObj);
     }).catch(function (err) {
@@ -126,6 +138,23 @@ member.prototype.findAllmembersForAllcity = (traceId, startfrom,cb) => {
         cb(resObj);
     });
 }
+
+// // list all member for owner level inREview members
+// member.prototype.findAllmembersForAllzoneInProgress = (traceId, startfrom,cb) => {
+//     var response = {
+//         message: "Cannot Get all member.",
+//         statusCode: 404,
+//         errorCode: "code1"
+//     }
+//     rdb.table("members").filter({"memberStatus":"inProgress","zoneId":zoneId}).group("zoneName").run().then(function (result) {
+//         var resObj = { "status": "200", "data": result }
+//         cb(null, resObj);
+//     }).catch(function (err) {
+//         log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
+//         var resObj = { "status": "404", "error": response }
+//         cb(resObj);
+//     });
+// }
 
 // Getpublished member by cityId
 member.prototype.citymembers = (traceId, cityId, cb) => {
