# zone-service/api/swagger/swagger.yaml
@@ -95,40 +95,10 @@ paths:
         default:
           description: "Unexpected error"
       x-swagger-router-controller: "zoneService"
-  /city/{cityId}/zones/{zoneId}/member:
-    get:
-      tags:
-      - "zoneowner can see"
-      summary: "Get all zones"
-      description: "Get all zones"
-      operationId: "getAllMembers"   
-      produces:
-      - "application/json"
-      parameters:
-      - name: "cityId"
-        in: "path"
-        description: "cityId"
-        required: true
-        type: "string"
-      - name: "zoneId"
-        in: "path"
-        description: "zoneId"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "A list of zones."
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/zones"
-        default:
-          description: "Unexpected error"
-      x-swagger-router-controller: "memberService"
-      
+  /city/{cityId}/zones/{zoneId}/owner/{ownerId}/member:
     post:
       tags:
-      - "member level"
+      - "owner level"
       summary: "Post a zone."
       description: "user can post a  zone"
       operationId: "createMember"
@@ -145,9 +115,9 @@ paths:
         description: "zoneId"
         required: true
         type: "string"
-      - name: "user_access"
-        in: "header"
-        description: "user_access"
+      - name: "ownerId"
+        in: "path"
+        description: "ownerId"
         required: true
         type: "string"
       - name: "body"
@@ -163,6 +133,77 @@ paths:
             properties: {}
         400:
           description: "Error creating a new publishers"
+        default:
+          description: "Unexpected error"
+      x-swagger-router-controller: "memberService"
+  /city/{cityId}/zones/{zoneId}/owner/{ownerId}/member/request:
+    post:
+      tags:
+      - "member level"
+      summary: "Post a zone."
+      description: "user can post a  zone"
+      operationId: "requestToJoin"
+      produces:
+      - "application/json"
+      security: 
+        - UserSecurity: []
+      parameters: 
+      - name: "cityId"
+        in: "path"
+        description: "cityId"
+        required: true
+        type: "string"
+      - name: "zoneId"
+        in: "path"
+        description: "zoneId"
+        required: true
+        type: "string"
+      - name: "ownerId"
+        in: "path"
+        description: "ownerId"
+        required: true
+        type: "string"
+      - name: "body"
+        in: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/zones"
+      responses:
+        200:
+          description: "zones details"
+          schema:
+            type: "object"
+            properties: {}
+        400:
+          description: "Error creating a new publishers"
+        default:
+          description: "Unexpected error"
+      x-swagger-router-controller: "memberService"
+  /zones/members/status/{status}:
+    get:
+      tags:
+      - "zoneowner can see"
+      summary: "Get all zones"
+      description: "Get all zones"
+      operationId: "getAllMembers"   
+      produces:
+      - "application/json"
+      security: 
+        - UserSecurity: []
+      parameters:
+      - name: "status"
+        in: "path"
+        description: "status"
+        required: true
+        type: "string"
+
+      responses:
+        200:
+          description: "A list of zones."
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/zones"
         default:
           description: "Unexpected error"
       x-swagger-router-controller: "memberService"
